@@ -23,6 +23,7 @@ in a shaft or an elevator
 -elevator panel buttons now support position offsets
 -fixed manual sizing parameters of the panel buttons
 -added support for mounting zipfiles into virtual directories
+-added the ability to spin the camera (Z-axis rotation)
 
 Version 1.4.1 (2.0 Alpha 4.1)
 -------------------------
